// Copyright 2026 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.workloadcluster.v1;

import "google/protobuf/empty.proto";
import "teleport/workloadcluster/v1/workloadcluster.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/workloadcluster/v1;workloadcluster";

// WorkloadClusterService provides an API to manage WorkloadClusters.
service WorkloadClusterService {
  // GetWorkloadCluster gets a WorkloadCluster.
  rpc GetWorkloadCluster(GetWorkloadClusterRequest) returns (WorkloadCluster);

  // CreateWorkloadCluster creates a new WorkloadCluster.
  rpc CreateWorkloadCluster(CreateWorkloadClusterRequest) returns (WorkloadCluster);

  // ListWorkloadClusters returns WorkloadClusters.
  rpc ListWorkloadClusters(ListWorkloadClustersRequest) returns (ListWorkloadClustersResponse);

  // UpdateWorkloadCluster updates WorkloadClusters.
  rpc UpdateWorkloadCluster(UpdateWorkloadClusterRequest) returns (WorkloadCluster);

  // UpsertWorkloadCluster creates a new WorkloadCluster or replaces an existing WorkloadCluster.
  rpc UpsertWorkloadCluster(UpsertWorkloadClusterRequest) returns (WorkloadCluster);

  // DeleteWorkloadCluster hard deletes the specified WorkloadCluster.
  rpc DeleteWorkloadCluster(DeleteWorkloadClusterRequest) returns (google.protobuf.Empty);
}

// Request for GetWorkloadCluster.
message GetWorkloadClusterRequest {
  string name = 1;
}

// Request for CreateWorkloadCluster.
message CreateWorkloadClusterRequest {
  WorkloadCluster cluster = 1;
}

// Request for UpdateWorkloadCluster.
message UpdateWorkloadClusterRequest {
  WorkloadCluster cluster = 1;
}

// Request for UpsertWorkloadCluster.
message UpsertWorkloadClusterRequest {
  WorkloadCluster cluster = 1;
}

// Request for DeleteWorkloadCluster.
message DeleteWorkloadClusterRequest {
  string name = 1;
}

// Request for ListWorkloadClusters.
message ListWorkloadClustersRequest {
  // page_size is the size of the page to request.
  int32 page_size = 1;

  // page_token is the page token.
  string page_token = 2;
}

// Response for ListWorkloadClusters.
message ListWorkloadClustersResponse {
  repeated WorkloadCluster clusters = 1;

  // NextPageToken is the key for the next page of WorkloadClusters.
  string next_page_token = 2;
  // TotalCount is the total number of workloadclusters in all pages.
  int32 total_count = 3;
}
